# ai_video_source_get

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  playwright.dev.config.ts  pyinstaller_entry.py  pyproject.toml  run_backend.bat  run_e2e.bat  run_test.bat  setup_tools.bat
.github/workflows/: build.yml  ci.yml
apps/orchestrator/: package.json  tsconfig.json
apps/orchestrator/src/: index.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  i18n.ts  styles.css
crates/toolserver/: Cargo.toml
crates/toolserver/src/: main.rs
issues/: 2026-01-22_18-34-51-vidunpack.csv
packaging/: RUNNING.md  run.ps1  run.sh
plan/: 2026-01-22_vidunpack_mvp.md
repro/bilibili/: repro.md  session.ts
repro/bilibili/fixtures/auth/: ytdlp-info.sample.json
scripts/: dev.mjs  predev.mjs  prompt_smoke.mjs  run-toolserver.mjs  setup_tools.ps1
src/ai_video_source_get/: cli.py
tests/e2e/: chat-links.spec.ts  chat-multi-asset.spec.ts  chat-resolve.spec.ts  chat.spec.ts  projects-delete.spec.ts  smoke.spec.ts
资料/: 分析图片.txt  分析视频.txt  流式返回.txt
