[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-source-get"
version = "0.1.0"
description = "AI video source getter (skeleton)"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
ai-video-source-get = "ai_video_source_get.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

